style(console): fix connector dark collapse button margin

--- a/packages/console/src/pages/Connectors/components/ConnectorForm/BasicForm.module.scss
+++ b/packages/console/src/pages/Connectors/components/ConnectorForm/BasicForm.module.scss
@@ -5,3 +5,7 @@
   font: var(--font-body-2);
   margin-top: _.unit(0.5);
 }
+
+.fieldButton {
+  margin-top: _.unit(2);
+}
